trying to fix footer issue on mobile devices

--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ footer p a:hover {
 @media (max-width: 768px) {
     /* move side nav to bottom */
     #side-nav {
-        position: absolute;
+        position: fixed;
         width: 100%;
         height: auto;
         background: inherit;
